--- a/assets/app.css
+++ b/assets/app.css
@@ -713,6 +713,10 @@ video {
   grid-column: 1 / -1;
 }
 
+.tw-m-0 {
+  margin: 0px;
+}
+
 .tw-mx-64 {
   margin-left: 16rem;
   margin-right: 16rem;
@@ -743,12 +747,24 @@ video {
   margin-right: 1rem;
 }
 
+.tw-mb-4 {
+  margin-bottom: 1rem;
+}
+
+.tw-mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .tw-block {
   display: block;
 }
 
 .tw-flex {
   display: flex;
+}
+
+.tw-inline-flex {
+  display: inline-flex;
 }
 
 .tw-grid {
@@ -876,6 +892,13 @@ video {
 
 .tw-cursor-pointer {
   cursor: pointer;
+}
+
+.tw-select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .tw-grid-cols-12 {
@@ -1006,6 +1029,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.tw-border-neutral-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(245 245 245 / var(--tw-border-opacity));
+}
+
 .\!tw-bg-red-400 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity)) !important;
@@ -1094,6 +1122,14 @@ video {
   --tw-gradient-to: #f97316 var(--tw-gradient-to-position);
 }
 
+.tw-fill-red-500 {
+  fill: #ef4444;
+}
+
+.tw-stroke-red-500 {
+  stroke: #ef4444;
+}
+
 .tw-object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -1141,6 +1177,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.tw-px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .tw-pb-0 {
   padding-bottom: 0px;
 }
@@ -1155,6 +1196,10 @@ video {
 
 .tw-pt-0 {
   padding-top: 0px;
+}
+
+.tw-pb-2 {
+  padding-bottom: 0.5rem;
 }
 
 .tw-text-center {
@@ -1184,6 +1229,11 @@ video {
 .tw-text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.tw-text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .tw-font-bold {
@@ -1241,6 +1291,21 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.tw-text-neutral-600 {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 82 / var(--tw-text-opacity));
+}
+
+.tw-text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.tw-text-amber-500 {
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity));
+}
+
 .tw-opacity-0 {
   opacity: 0;
 }
@@ -1295,6 +1360,16 @@ video {
 
 .tw-duration-500 {
   transition-duration: 500ms;
+}
+
+.tw-ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hover\:tw-scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:tw-opacity-0:hover {
