--- a/assets/app.css
+++ b/assets/app.css
@@ -885,6 +885,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.tw-scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .tw-animate-pulse-fast {
   -webkit-animation: pulse-fast 0.9s infinite;
           animation: pulse-fast 0.9s infinite;
@@ -892,6 +898,15 @@ video {
 
 .tw-cursor-pointer {
   cursor: pointer;
+}
+
+.tw-cursor-move {
+  cursor: move;
+}
+
+.tw-cursor-grab {
+  cursor: -webkit-grab;
+  cursor: grab;
 }
 
 .tw-select-none {
@@ -1376,6 +1391,10 @@ video {
   opacity: 0;
 }
 
+.hover\:tw-opacity-100:hover {
+  opacity: 1;
+}
+
 .active\:tw-translate-y-\[2px\]:active {
   --tw-translate-y: 2px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1390,6 +1409,16 @@ video {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-group:hover .group-hover\:tw-scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.tw-group:hover .group-hover\:tw-opacity-100 {
+  opacity: 1;
 }
 
 @media (min-width: 750px) {
@@ -1419,5 +1448,15 @@ video {
 
   .disabled\:md\:tw-hidden:disabled {
     display: none;
+  }
+
+  .tw-group:hover .md\:group-hover\:tw-scale-110 {
+    --tw-scale-x: 1.1;
+    --tw-scale-y: 1.1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .tw-group:hover .md\:group-hover\:tw-opacity-100 {
+    opacity: 1;
   }
 }
