--- a/sections/tc-product-image-cards.liquid
+++ b/sections/tc-product-image-cards.liquid
@@ -42,17 +42,10 @@
     background: radial-gradient(rgba(255, 255, 255, 0.1), transparent 60%);
   }
 
-
-  /*
-   .card-image-container-{{ section.id }}
-   img {
-   opacity: 0.2
-   }
-*/
-
   .card-info-container-{{ section.id }} {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     width: 100%;
     padding: 3rem;
     text-align: center
@@ -164,7 +157,7 @@
               style="--animation-order: {{ forloop.index }};"
               {% endif %}
               {{ block.shopify_attributes }}>
-              <a href="{{ shop.url }}{{ block.settings.product.url }}" class="card-image-container-{{ section.id }} tw-cursor-grab">
+            {%if block.settings.product != blank%}<a href="{{ shop.url }}{{ block.settings.product.url }}" class="card-image-container-{{ section.id }} tw-cursor-grab">{% else %}<div class="card-image-container-{{ section.id }}">{% endif %}
                 <img
                   style="transform: ({% if block.settings.image_primary_offset_x_flip %}-{% endif %}{{block.settings.image_primary_offset_x}}%;  {% if block.settings.image_primary_offset_y_flip %}-{% endif %}{{block.settings.image_primary_offset_y}}%)"
                   srcset="{{ block.settings.image_primary | image_url: width: 350 }} 1x, {{ block.settings.image_primary | image_url: width: 700 }} 2x"
@@ -177,7 +170,7 @@
                     sizes="300px, 600px"
                     class="card-image-secondary-{{section.id}} md:group-hover:tw-opacity-100 tw-opacity-0 md:group-hover:tw-scale-110 tw-transition-all tw-duration-300 tw-ease-in-out tw-select-none" />
                 {% endunless %}
-              </a>
+            {%if block.settings.product != blank%}</a>{% else %}</div>{% endif %}
               <div class="card-info-container-{{ section.id }}">
                 <h4 class="h3">
                   {% if block.settings.title == blank %}
@@ -203,6 +196,7 @@
                   </ul>
                 {% endunless %}
                 {% unless block.settings.product == blank %}
+                    {% assign product_form_id = block.id %}
                   <product-form data-section-id="{{ section.id }}">
                     {%- form 'product'
                       , block.settings.product
@@ -223,7 +217,7 @@
                         id="{{ product_form_id }}-submit"
                         type="submit"
                         name="add"
-                        class="quick-add__submit button button--full-width button--secondary{% if horizontal_quick_add %} card--horizontal__quick-add{% endif %}"
+                        class="quick-add__submit button button--full-width"
                         aria-haspopup="dialog"
                         aria-labelledby="{{ product_form_id }}-submit title-{{ section_id }}-{{ block.settings.product.id }}"
                         aria-live="polite"
